# fastapi-practice

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  DockerfileDevelop  Makefile  README.md  alembic.ini  compose.yml  docker-bake.hcl  docker-compose.override.yml  docker-compose.yml  docker.env  index.html  pyproject.toml  pytest.ini
.github/workflows/: build.yml  ci.yml  test.yml
1/: index.html
1/export/: influxDbData.txt
10/: index.html
10/export/: influxDbData.txt
100/: index.html
100/export/: influxDbData.txt
101/: index.html
101/export/: influxDbData.txt
102/: index.html
102/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
102/export/: influxDbData.txt  prometheusData.txt
102/history/: categories-trend.json  duration-trend.json  history.json  retry-trend.json
102/widgets/: executors.json  history-trend.json  severity.json  status-chart.json  suites.json  summary.json
103/: index.html
103/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
103/export/: influxDbData.txt  prometheusData.txt
103/history/: history.json
103/widgets/: categories-trend.json  duration-trend.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  summary.json
104/: index.html
104/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
104/export/: influxDbData.txt  prometheusData.txt
104/history/: categories-trend.json  history.json  retry-trend.json
104/widgets/: duration-trend.json  duration.json  executors.json  history-trend.json  severity.json  summary.json
105/: index.html
105/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
105/export/: influxDbData.txt  prometheusData.txt
105/history/: history-trend.json  history.json  retry-trend.json
105/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  severity.json  suites.json  summary.json
106/: index.html
106/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
106/export/: influxDbData.txt  prometheusData.txt
106/history/: categories-trend.json  duration-trend.json  history.json  retry-trend.json
106/widgets/: duration.json  executors.json  history-trend.json  severity.json  summary.json
107/: index.html
107/data/: behaviors.csv  behaviors.json  packages.json  (+3 more)
108/: index.html
109/: index.html
11/: index.html
110/: index.html
111/: index.html
112/: index.html
113/: index.html
114/: index.html
115/: index.html
116/: index.html
117/: index.html
118/: index.html
119/: index.html
12/: index.html
120/: index.html
121/: index.html
122/: index.html
123/: index.html
124/: index.html
125/: index.html
126/: index.html
127/: index.html
128/: index.html
129/: index.html
13/: index.html
130/: index.html
131/: index.html
132/: index.html
133/: index.html
134/: index.html
135/: index.html
136/: index.html
137/: index.html
138/: index.html
139/: index.html
14/: index.html
140/: index.html
141/: index.html
142/: index.html
143/: index.html
144/: index.html
145/: index.html
146/: index.html
147/: index.html
148/: index.html
149/: index.html
15/: index.html
150/: index.html
151/: index.html
152/: index.html
153/: index.html
154/: index.html
155/: index.html
156/: index.html
157/: index.html
158/: index.html
159/: index.html
16/: index.html
160/: index.html
168/: index.html
169/: index.html
17/: index.html
170/: index.html
171/: index.html
172/: index.html
173/: index.html
174/: index.html
175/: index.html
176/: index.html
177/: index.html
178/: index.html
179/: index.html
18/: index.html
180/: index.html
181/: index.html
182/: index.html
183/: index.html
184/: index.html
185/: index.html
188/: index.html
189/: index.html
19/: index.html
190/: index.html
191/: index.html
192/: index.html
193/: index.html
194/: index.html
195/: index.html
196/: index.html
197/: index.html
198/: index.html
199/: index.html
2/: index.html
20/: index.html
200/: index.html
201/: index.html
202/: index.html
203/: index.html
204/: index.html
205/: index.html
206/: index.html
207/: index.html
208/: index.html
209/: index.html
210/: index.html
211/: index.html
212/: index.html
213/: index.html
214/: index.html
215/: index.html
216/: index.html
217/: index.html
218/: index.html
219/: index.html
220/: index.html
221/: index.html
222/: index.html
223/: index.html
224/: index.html
225/: index.html
226/: index.html
227/: index.html
228/: index.html
229/: index.html
230/: index.html
231/: index.html
232/: index.html
233/: index.html
234/: index.html
235/: index.html
236/: index.html
237/: index.html
238/: index.html
239/: index.html
240/: index.html
241/: index.html
242/: index.html
243/: index.html
244/: index.html
245/: index.html
246/: index.html
247/: index.html
248/: index.html
249/: index.html
250/: index.html
251/: index.html
252/: index.html
253/: index.html
254/: index.html
255/: index.html
256/: index.html
257/: index.html
258/: index.html
259/: index.html
260/: index.html
261/: index.html
262/: index.html
263/: index.html
264/: index.html
265/: index.html
267/: index.html
268/: index.html
269/: index.html
270/: index.html
271/: index.html
3/: index.html
37/: index.html
4/: index.html
5/: index.html
6/: index.html
7/: index.html
8/: index.html
9/: index.html
96/: index.html
97/: index.html
98/: index.html
99/: index.html
alembic/: env.py
analyze/: test.ipynb
app/: main.py
frontend/: Dockerfile  README.md  index.html  package.json
last-history/: duration-trend.json
old/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: open_window.py
src/: backend_pre_start.py  db.py  main.py  migrate_db.py
tests/: conftest.py
(+12173 files in other folders)
