[project]
name = "fastapi-practice"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "aiomysql>=0.2.0",
    "polars>=0.20.31",
    "boto3>=1.37.23",
    "pydantic-settings>=2.2.1",
    "passlib>=1.7.4",
    "tenacity>=9.0.0",
    "google-generativeai>=0.5.4",
    "sqlmodel>=0.0.21",
    "pydantic[email]>=2.9.2",
    "sentry-sdk>=2.19.0",
    "greenlet>=3.1.1",
]
readme = "README.md"
requires-python = ">= 3.13"

[dependency-groups]
api = [
    "fastapi[standard]>=0.115.12"
]
auth = [
    "pyjwt>=2.8.0",
    "pyotp>=2.9.0",
]

dev = [
    "ruff>=0.7.3",
    "pytest-asyncio>=0.23.2",
    "aiosqlite>=0.19.0",
    "pytest-mock>=3.14.0",
    "black>=23.11.0",
    "pytest-check>=2.2.2",
    "mypy>=1.8.0",
    "testcontainers>=4.1.1",
    "minio>=7.2.5",
    "alembic>=1.13.1",
    "allure-pytest>=2.13.5",
    "types-passlib>=1.7.7.20240327",
    "isort>=5.13.2",
    "ty>=0.0.0a8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# 効いてない？？？？
default-groups = "all"
# こうしたら選べる
#default-groups = ["api", "auth", "dev"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.rye.scripts]
lint = { chain = ["lint:black", "lint:ruff", "lint:mypy", "lint:isort" ] }
"lint:black" = "black ."
"lint:ruff" = "ruff check . --fix"
"lint:mypy" = "mypy ./src" # testディレクトリは無視
"lint:isort" = "isort ."

start = "uvicorn src.main:app --host 0.0.0.0 --reload"
production = "uvicorn src.main:app --workers 4"
#production = "gunicorn src.main:app --workers 4"

[tool.mypy]
allow_redefinition = true
allow_untyped_globals = false
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = true
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
ignore_missing_imports = true
implicit_reexport = true
namespace_packages = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false
