[project]
name = "fastapi-practice"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "aiomysql>=0.3.2",
    "polars>=1.36.1",
    "boto3>=1.42.18",
    "pydantic-settings>=2.12.0",
    "passlib>=1.7.4",
    "tenacity>=9.1.2",
    "google-generativeai>=0.5.4",
    "sqlmodel>=0.0.31",
    "pydantic[email]>=2.12.5",
    "sentry-sdk>=2.48.0",
    "greenlet>=3.3.0",
    "matplot>=0.1.9",
]
readme = "README.md"
requires-python = ">= 3.13"

[dependency-groups]
api = [
    "fastapi[standard]>=0.128.0"
]
auth = [
    "pyjwt>=2.10.1",
    "pyotp>=2.9.0",
]

worker = [
    "celery>=5.6.1",
]

dev = [
    "ruff>=0.14.7",
    "pytest-asyncio>=0.26.0",
    "aiosqlite>=0.22.1",
    "pytest-mock>=3.15.1",
    "black>=25.12.0",
    "pytest-check>=2.6.2",
    "mypy>=1.19.1",
    "testcontainers>=4.1.1",
    "minio>=7.2.5",
    "alembic>=1.13.1",
    "allure-pytest>=2.13.5",
    "types-passlib>=1.7.7.20240327",
    "isort>=5.13.2",
    "ty>=0.0.8",
    "tuna>=0.5.11",
    "poethepoet>=0.39.0",
]
analyze = [
    "jupyter>=1.1.1",
    "matplot>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# 効いてない？？？？
default-groups = "all"
# こうしたら選べる
#default-groups = ["api", "auth", "dev"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.poe.tasks]
hello = "echo 'hello, poe!'"
lint = { parallel = ["lint:black", "lint:ruff", "lint:mypy", "lint:isort", "lint:ty" ] }
"lint:black" = "black ."
"lint:ruff" = "ruff check . --fix"
"lint:mypy" = "mypy ./src" # testディレクトリは無視
"lint:isort" = "isort ."
"lint:ty" = "ty check src"

start = "uvicorn src.main:app --host 0.0.0.0 --reload"
production = "uvicorn src.main:app --workers 4"

[tool.mypy]
allow_redefinition = true
allow_untyped_globals = false
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = true
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
ignore_missing_imports = true
implicit_reexport = true
namespace_packages = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false
